Fix memory leaks when G_ERRORCHECK_MUTEXES is used: http://bugzilla.gnome.org/show_bug.cgi?id=311043